--- a/docs/scss/_footer.scss
+++ b/docs/scss/_footer.scss
@@ -19,6 +19,7 @@ footer a{
     color: #ffef00;
     gap: 3px;
     font-size: 1em;
+    text-shadow: 0 0 0.1em #0000005e;
 }
 footer svg{
     color: #0a66c2;
