--- a/docs/scss/_general.scss
+++ b/docs/scss/_general.scss
@@ -2,10 +2,12 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 html{
     font-family: 'Nunito', sans-serif;
     font-size: 1.1rem;
+    text-underline-position: under;
 }
 body{
     text-align: center;
@@ -22,10 +24,13 @@ button{
     padding: 0.2em 1em;
     margin: 1em;
     font-family: inherit;
-    font-size: 0.8rem;
+    font-size: 14px;
     text-align: center;
     vertical-align: middle;
 }
 input {
     text-align: center;
+}
+.swal2-container.swal2-center>.swal2-popup {
+    box-shadow: 0 0 20px 2px #00000061;
 }
