--- a/docs/scss/puntaje.scss
+++ b/docs/scss/puntaje.scss
@@ -27,6 +27,10 @@
     font-size: 1.4rem;
     margin: 1em 0;
 }
+#puntaje-textoExplicativo-listaDesordenada {
+    list-style-position: inside;
+    margin-left: 15px;
+}
 #puntaje-textoExplicativo-listaDesordenada li{
     text-align: start;
 }
@@ -51,7 +55,7 @@
 table,caption,tr,th,td{
     border: 1px solid black;
     text-align: center;
-    padding: 10px;
+    padding: 0.4em;
 
 }
 table {
@@ -61,6 +65,10 @@ table {
     margin: 50px 0px;
     background: #8fe0ffb5;
     box-shadow: 0 0 6px 0.5px black;
+}
+#tablaBodyParticipantes {
+    text-transform: capitalize;
+    line-break: anywhere;
 }
 table th{
     background: #aed8ff;
@@ -88,15 +96,10 @@ tbody tr:not(.Nuevo){
         display: flex;
         flex-direction: row;
     }
-    table tbody{
-        line-break: anywhere;
-    }
 }
 @media screen and (min-width: 0px) and (max-width: 425px){
     table{
         width: 100%;
-    }
-    table tbody{
-        line-break: anywhere;
+        font-size: 20px;
     }
 }
