--- a/docs/scss/registrar.scss
+++ b/docs/scss/registrar.scss
@@ -1,5 +1,5 @@
 @import "general";
-@import "header";
+/* @import "header"; */
 @import "footer";
 @import "variables";
 
@@ -16,6 +16,9 @@
     //background: linear-gradient(354deg, RGBa(103, 61, 254, 1) 0%, RGBa(83, 107, 245, 1) 50%, RGBa(95, 228, 247, 1) 100%);
     background: linear-gradient(45deg, #9383ff 0%, #7a84ff 50%, #62adff 100%);
 }
+.swal2-container.swal2-center>.swal2-popup {
+    font-size: 19px;;
+}
 #contenedorForm{
     display: flex;
     flex-direction: column;
@@ -25,13 +28,13 @@
     position: relative;
 }
 #registrar-title{
-    font-size: 4rem;
+    font-size: 105px;
     font-weight: bold;
     letter-spacing: -0.13em;
 }
 #registrar-title span{
     display: inline-block;
-    text-shadow: 1px 1px 1.5px #000000db;;
+    text-shadow: 0.02em 0.02em 0.01em #000000;
 }
 #registrar-title span:nth-child(1) { color: #ff3d3d; transform: rotate(-5deg); }
 
@@ -136,7 +139,7 @@ input[type="text"] {
 }
 @media screen and (min-width: 0px) and (max-width: 490px){
     #registrar-title {
-        font-size: 57px;
+        font-size: 68px;
     }
     .registrar-avatares-fondo{
         display: none;
