--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -98,10 +98,11 @@
     border-radius: 2em;
     padding: 0.3em 0.7em;
     border: 1px solid #00000085;
+    font-size: 16px;
 }
 #index-categorias a:hover{
     text-decoration: underline;
-    text-shadow: 0PX 0PX 12PX white;
+    text-shadow: 0 0 0.4em white;
 }
 /* -------------- MATEMATICA -------------- */
 #matematica{
@@ -117,10 +118,10 @@
     align-items: center;
     background: #000000bd;
     justify-content: center;
-    padding: 10px 10px 20px 10px;
+    padding: 10px 10px 10px 10px;
     border-radius: 10px;
     flex-direction: column;
-    width: min-content;
+    width: auto;
     line-break: anywhere;
 }
 #calculadora{
@@ -139,7 +140,7 @@
     justify-content: space-evenly
 }
 #calculadoraValor1, #calculadoraValor2{
-    width: 75px;
+    width: 85px;
 }
 #matematica #contenedorCaluladora .botonesCalculadora{
     width: 21px;
@@ -165,7 +166,7 @@
 }
 div#ejercicioMate input {
     border-radius: 500px;
-    border: 1px solid #0000008c;
+    border: 1px solid #000000;
     /* width: 142px; */
     box-shadow: 0 0 5px 1px #00000024;
 }
@@ -177,8 +178,6 @@ div#ejercicioMate input {
 }
 #contenedorCaluladora p {
     color: white;
-    /* margin: 0px 0px 0px 23px;
-    letter-spacing: 4px; */
 }
 /* -------------- LENGUA -------------- */
 #lengua{
@@ -217,7 +216,7 @@ hr{
 }
 #lengua input {
     border-radius: 3em;
-    border: 1px solid #0000008c;
+    border: 1px solid #000000;
     /* width: 142px; */
     box-shadow: 0 0 5px 1px #00000024;
     padding: 0.1% 1%;
@@ -268,7 +267,8 @@ p#textoClick {
 }
 .claseCajaClick{
     width: 110px;
-    height: 110px;
+    height: auto;
+    aspect-ratio: 1/1;
     border: 5px solid black;
     margin: 10px;
     background-color: black;
@@ -361,7 +361,7 @@ div#contenedorDeBanderas {
     display: flex;
     flex-direction: row;
     pointer-events: none;
-    gap: 10% 5%;
+    gap: 5px 5%;
     width: 100%;
     align-items: center;
     flex-wrap: wrap;
@@ -612,11 +612,13 @@ label{
     /* animation: sombra 2s infinite ease-out;
     animation: 1.5s linear 0s infinite normal none running jello-horizontal; */
     //animation: sombra 2s infinite ease-out, 1.5s linear 0s infinite normal none running jello-horizontal;
-    animation: 2s linear 0s infinite normal none running jello-horizontal;
+    //animation: 2s linear 0s infinite normal none running jello-horizontal;
 }
 #contenedorBotonFinal a p{
-    text-shadow: 0px 0px 3px black;
     font-size: 37px;
+}
+.animacion-boton-final{
+    animation: 2s linear 0s infinite normal none running jello-horizontal;
 }
 /* @keyframes sombra{
     0%{
@@ -677,11 +679,11 @@ label{
         margin: 3% 0%;
         border-radius: 1%;
     }
-    .claseCajaClick{
+    /* .claseCajaClick{
 
-        width: 80px;
-        height: 80px;
-    }
+        width: 84px;
+        height: 84px;
+    } */
     /* #contenedorArgentina, #contenedorChile, #contenedorItalia{
         width: 300px;
         height: 150px;
@@ -695,6 +697,14 @@ label{
         height: 40px;
         margin-bottom: 5px;
     } */
+}
+@media screen and (min-width: 0px) and (max-width: 490px) {
+    .claseCajaClick {
+        width: 25.5vw;
+    }
+    footer {
+        font-size: 17px;
+    }
 }
 // animation cssloaders.github.io
 #contenedorMioLoader{
