--- a/docs/scss/_footer.scss
+++ b/docs/scss/_footer.scss
@@ -7,6 +7,7 @@ footer{
     justify-content: center;
     align-items: center;
     font-size: 23px;
+    padding: 10px 0 20px 0;
 }
 footer p{
     font-size: 1em;
