--- a/docs/scss/_general.scss
+++ b/docs/scss/_general.scss
@@ -12,7 +12,11 @@ html{
 body{
     text-align: center;
     background: linear-gradient(45deg, #9185d9 0%, #6c77ff 50%, #55a3f8 100%);
-} 
+    min-height: 100vh;
+}
+h1, h2, h3, h4, h5, h6, label, p{
+    text-wrap: pretty;
+}
 button{
     border: 1px solid rgba(0, 0, 0, 0.508);
     box-shadow: 0 0 2px 0.5px rgba(0, 0, 0, 0.502);
