--- a/docs/scss/_header.scss
+++ b/docs/scss/_header.scss
@@ -10,6 +10,7 @@ header{
     background: linear-gradient(45deg, #67a3ff 0%, #9aa2ff 50%, #6ea7ff 100%);
     box-shadow: 0 1px 13px 1px #00000063;
     border-bottom: 1px solid #00000052;
+    font-size: 20px;
     z-index: 1000;
 }
 header > .header-title{
@@ -56,7 +57,7 @@ header li{
 }
 header a{
     color: black;
-    font-size: 20px;
+    font-size: 1em;
     text-decoration: none;
 }
 header nav a:hover{
@@ -98,7 +99,7 @@ p.nav-user-text {
     text-overflow: ellipsis;
     white-space: nowrap;
     text-transform: capitalize;
-    font-size: 16px;
+    font-size: 1em;
 }
 #header-infoLogout{
     position: absolute;
@@ -107,7 +108,7 @@ p.nav-user-text {
     background: #4f74bc;
     box-shadow: 0 3px 7px 0px #00000087;
     z-index: 1;
-    font-size: 16px;
+    font-size: 1em;
     border-radius: 0 0 1em 1em;
     overflow: hidden;
 }
