--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -57,7 +57,7 @@
     margin: 3% 12%;
     border-radius: 10%;
     min-height: 600px;
-    padding: 3% 0%;
+    padding: 3% 2vw;
     box-shadow: 0px 0px 14px 3px #0000009e;
 }
 .materia h2{
@@ -213,6 +213,10 @@ hr{
     height: 1px;
     background: black;
 }
+.resaltado-desafio-lengua{
+    text-decoration: underline;
+    font-weight: bolder;
+}
 #lengua input {
     border-radius: 3em;
     border: 1px solid #000000;
@@ -250,8 +254,37 @@ div#memoria1 {
     margin: 6%; */
 }
 p#textoClick {
-    margin: 0px 0px 20px 0px;
+    font-size: 32px;
+    text-transform: uppercase;
 }
+.textoBlink {
+    -webkit-animation: blink-1 0.3s both;
+	animation: blink-1 0.3s both;
+    animation-delay: 0.3s;
+}
+@-webkit-keyframes blink-1 {
+    0%,
+    50%,
+    100% {
+      opacity: 1;
+    }
+    25%,
+    75% {
+      opacity: 0;
+    }
+  }
+  @keyframes blink-1 {
+    0%,
+    50%,
+    100% {
+      opacity: 1;
+    }
+    25%,
+    75% {
+      opacity: 0;
+    }
+  }
+  
 /* ----------------------- */
 #contenedorDeImagenes{
     display: flex;
@@ -264,20 +297,40 @@ p#textoClick {
 #memoriaBloque2para3{
     display: flex;
 }
-.claseCajaClick{
-    width: 110px;
+.flip-container{
+    perspective: 1000px;
+}
+.flipper-frontYBack{
+    width: 100px;
     height: auto;
     aspect-ratio: 1/1;
     border: 5px solid black;
-    margin: 10px;
+    margin: 5px;
     background-color: black;
     box-shadow: 0px 0px 14px 0px #0000009e;
     color: white;
     display: flex;
     align-items: center;
     justify-content: center;
+
+    transition: 0.6s;
+    transform-style: preserve-3d;
+    position: relative;
 }
-.claseCajaClick p{
+.front, .back {
+    backface-visibility: hidden;
+    position: absolute;
+    /* top: 0;
+    left: 0; */
+    width: 100%;
+    height: 100%;
+}
+.front{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.front p{
     position: absolute;
     font-size: 57px;
     -webkit-text-stroke-color: #ffffff;
@@ -285,31 +338,41 @@ p#textoClick {
     -webkit-text-fill-color: #ffffff00;
     font-family: sans-serif;
 }
-.claseCajaClick img{
+.back {
+    transform: rotateY(180deg);
+}
+.back img{
     width: 100%;
     height: 100%;
-    opacity: 0%;
-    
 }
-.claseCajaClick .mostrarImagenesOnClick{
-    opacity: 100%;
+.mostrarImagenesOnClick{
+    transform: rotateY(180deg);
 }
 .mostrarMemoria{
-    animation-name: animacionImagenMemoria;
-    animation-duration: 1s;
-    animation-timing-function: ease-out;
+    animation-name: tarjetaMemoria;
+    animation-timing-function: cubic-bezier(0.04, 0.87, 0.33, 1.05);
+}
+@keyframes tarjetaMemoria{
+    0%{
+        transform: none;
+    }
+    50%{
+        transform: rotateY(180deg);
+    }
+    100%{
+        transform: none;
+    }
+
 }
 
-@keyframes animacionImagenMemoria{
-    from {opacity: 0%;}
-    to   {opacity: 100%;}
-}
 .imagenBien{
+    border: 5px solid #00de08;
     box-shadow: 0PX 0PX 8PX 7px #00c000;
     pointer-events: none;
 }
 .imagenMal{
-    box-shadow: 0PX 0PX 9PX 7px red;
+    border: 5px solid red;
+    box-shadow: 0PX 0PX 8PX 7px #ff0000bf;
     pointer-events: none;
 }
 #botonAnimacion {
@@ -343,6 +406,61 @@ p#textoClick {
 }
 .bloquearClickContenedorMemoria{
     pointer-events: none;
+}
+// animation cssloaders.github.io
+#contenedorMioLoader{
+    width: 70px;
+      height: 70px;
+}
+      
+.contenedorMioLoaderEscondido{
+    display: none;
+
+}
+.contenedorMioLoaderAparecer{
+    display: block;
+}
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 10px solid #FFF;
+    border-radius: 50%;
+    position: relative;
+    transform: rotate(45deg);
+    box-sizing: border-box;
+    display: inline-block;
+}
+
+#loader-hijo-movil {
+    //content: "";
+    position: absolute;
+    box-sizing: border-box;
+    inset: -10px;
+    border-radius: 50%;
+    border: 10px solid #FF3D00;
+    animation: prixClipFix linear;
+}
+
+@keyframes prixClipFix {
+    0% {
+        clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
+    }
+
+    25% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
+    }
+
+    50% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
+    }
+
+    75% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%)
+    }
+
+    100% {
+        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0)
+    }
 }
 /* ------------------------ BANDERAS -----------------------*/
 #banderas{
@@ -383,6 +501,10 @@ div#contenedorDeBanderas {
     align-items: center;
     filter: brightness(0);
 }
+// Por razones de bubbling en javascript
+.cajasBanderaColor svg{
+    pointer-events: none;
+}
 /* ------ Bandera argentina ----- */
 #contenedorArgentina{
     display: grid;
@@ -396,6 +518,8 @@ div#contenedor-sol {
     height: 100%;
     width: min-content;
     aspect-ratio: 1/1;
+    //Por razones de bubbling
+    pointer-events: none;
 }
 div#contenedor-sol svg{
     height: 100%;
@@ -423,6 +547,8 @@ div#contenedor-sol svg{
     width: 55%;
     height: 55%;
     color: white;
+    stroke-width: 2%;
+    stroke: #414141;
 }
 .cajasChile:nth-child(2){
     grid-area: dos;
@@ -524,12 +650,14 @@ button.botonesColores{
     }
   }
 .coloresBien{
-    box-shadow: 0 0 8PX 6px #15fe3cb0;
+    box-shadow: 0 0 8PX 3px #15fe3cb0;
+    border: 3px solid #00b406;
     filter: brightness(1);
 }
 
 .coloresMal{
-    box-shadow: 0 0 8PX 1px #ff0000;
+    box-shadow: 0 0 8PX 3px #b40202b8;
+    border: 3px solid #be0000;
     filter: brightness(1);
 }
 
@@ -703,60 +831,5 @@ label{
     }
     footer {
         font-size: 17px;
-    }
-}
-// animation cssloaders.github.io
-#contenedorMioLoader{
-    width: 70px;
-      height: 70px;
-}
-      
-.contenedorMioLoaderEscondido{
-    display: none;
-
-}
-.contenedorMioLoaderAparecer{
-    display: block;
-}
-.loader {
-    width: 48px;
-    height: 48px;
-    border: 10px solid #FFF;
-    border-radius: 50%;
-    position: relative;
-    transform: rotate(45deg);
-    box-sizing: border-box;
-    display: inline-block;
-}
-
-.loader::before {
-    content: "";
-    position: absolute;
-    box-sizing: border-box;
-    inset: -10px;
-    border-radius: 50%;
-    border: 10px solid #FF3D00;
-    animation: prixClipFix 7s linear;
-}
-
-@keyframes prixClipFix {
-    0% {
-        clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0)
-    }
-
-    25% {
-        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0)
-    }
-
-    50% {
-        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 100% 100%, 100% 100%)
-    }
-
-    75% {
-        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%)
-    }
-
-    100% {
-        clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0)
     }
 }
